# exp

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
common/: CMakeLists.txt  utils.cc  utils.h
mat/: CMakeLists.txt  README.md  matrix.cc  matrix_torch.py  omp_scheduler.cc  omp_test.cc
metaprogram/: CMakeLists.txt  factorial.cc  move_forward.cc
